feat: implement Phase 1 audio processing tasks (enhance-audio, detect-silence, trim)

--- a/.env.example
+++ b/.env.example
@@ -8,24 +8,14 @@
 # Port for the API server (default: 3000)
 PORT=3000
 
-# API Key for authentication (leave empty to disable authentication)
+# API Key for authentication (leave empty to disable authentication in dev mode)
 # Generate a secure key: openssl rand -hex 32
 API_KEY=your-secret-api-key-here
 
-# =============================================================================
-# Supabase Storage Configuration (Required)
-# =============================================================================
-
-# Your Supabase project URL
-# Example: https://abcdefghijklmnop.supabase.co
-SUPABASE_URL=https://your-project.supabase.co
-
-# Supabase service role key (NOT the anon key!)
-# Found in: Project Settings > API > service_role key
-SUPABASE_SERVICE_KEY=your-service-role-key-here
-
-# Storage bucket name for assembled videos (default: final-reels)
-SUPABASE_BUCKET=final-reels
+# Base URL for download links (auto-detected from request if not set)
+# Set this in production to your public URL
+# Example: https://ffmpeg-api.your-domain.com
+BASE_URL=
 
 # =============================================================================
 # Processing Limits
@@ -39,3 +29,6 @@ MAX_FILE_SIZE_MB=500
 
 # FFmpeg processing timeout in milliseconds (default: 300000 = 5 minutes)
 FFMPEG_TIMEOUT=300000
+
+# Output directory for assembled videos (default: /tmp/ffmpeg-outputs)
+OUTPUT_DIR=/tmp/ffmpeg-outputs
