--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,7 @@ services:
     environment:
       - PORT=3000
       - API_KEY=${API_KEY}
-      - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_KEY}
-      - SUPABASE_BUCKET=${SUPABASE_BUCKET:-final-reels}
+      - BASE_URL=${BASE_URL}
       - MAX_VIDEOS=${MAX_VIDEOS:-20}
       - MAX_FILE_SIZE_MB=${MAX_FILE_SIZE_MB:-500}
       - FFMPEG_TIMEOUT=${FFMPEG_TIMEOUT:-300000}
